--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-#ant stuff/bin//download/#Remove OS generated garbage*/.DS_Store.DS_Store.DS_Store?.Spotlight-V100.TrashesIcon?ehthumbs.dbThumbs.db#gradle stuff.gradle/build/run/## ForgeGradlerun/out/## idea*.iml*.ipr*.iws## eclipse.settings.metadata.classpath.projectbin/
+bin/
+download/
+*/.DS_Store
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+.gradle/
+build/
+run/
+out/
+*.iml
+*.ipr
+*.iws
+.settings/
+.metadata/
+.classpath/
+.project/
+bin/
