--- a/TeamMod/.classpath
+++ b/TeamMod/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" exported="true"/>
+	<classpathentry kind="src" path="src/api/java"/>
 	<classpathentry sourcepath="C:/Users/Katrina/.gradle/caches/artifacts-26/filestore/net.minecraft/launchwrapper/1.8/source/80761bb83b7a8fe0b20ced886f8864a613826e21/launchwrapper-1.8-sources.jar" kind="lib" path="C:/Users/Katrina/.gradle/caches/artifacts-26/filestore/net.minecraft/launchwrapper/1.8/jar/d4c0895977dd7f0b3f56281cee53a64d4c0c0322/launchwrapper-1.8.jar" exported="true"/>
 	<classpathentry sourcepath="C:/Users/Katrina/.gradle/caches/artifacts-26/filestore/org.ow2.asm/asm-debug-all/4.1/source/1c218d5a0b8b932a1528b74069aa6973dcfcea74/asm-debug-all-4.1-sources.jar" kind="lib" path="C:/Users/Katrina/.gradle/caches/artifacts-26/filestore/org.ow2.asm/asm-debug-all/4.1/jar/dd6ba5c392d4102458494e29f54f70ac534ec2a2/asm-debug-all-4.1.jar" exported="true">
 		<attributes>
